test/neg/neg-dist_object1.errc
T must be Serializable for dist_object<T>::fetch
